--- a/src/pages/cart/Cart.css
+++ b/src/pages/cart/Cart.css
@@ -8,15 +8,24 @@
   }
 
   .name h1 {
+    text-align: center;
     font-size: 24px;
     color: #333;
   }
   
+  .checkout p{
+    text-align: center;
+    font-weight: bold;
+    font-size:3rem;
+  }
+
+  .noitem{
+    text-align: center;
+  }
   /* Styles for the cart items */
   .cart-items {
     display: flex;
     flex-direction: column;
-    width: 750px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
@@ -53,4 +62,32 @@
       width: 60px; 
       height: 60px;
     }
+  }
+
+  .countHandler {
+    display: flex;
+    align-items: center;
+  }
+  
+  .countHandler button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    margin: 0 5px;
+    cursor: pointer;
+    width:min-content
+  }
+  
+  .countHandler button:hover {
+    background-color: #0056b3;
+  }
+  
+  .countHandler input {
+    width: 40px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px;
   }
